alignment not correct

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 401;
   color-scheme: light dark;
-  color: rgba(237, 113, 244, 0.87);
-  background-color: #D3C5E5;
+  color: rgba(234, 203, 236, 0.87);
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
